2025-11-15T01:57:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19382640714 # 809
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-15
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 202 269 / 205 272
* notice: next accum: outdated-unq outdated-all / unq all: 203 270 / 205 272
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-31] / []

2025-11-13T02:03:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19318074168 # 807
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-13
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 201 268 / 205 272
* notice: next accum: outdated-unq outdated-all / unq all: 202 269 / 205 272
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-30] / []

2025-11-11T02:02:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19252453096 # 805
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-11
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 201 268 / 204 271
* notice: next accum: outdated-unq outdated-all / unq all: 201 268 / 205 272
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-11-10]

2025-11-09T02:05:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19201815618 # 803